# sphinx-autodoc-multimethod

./: .gitignore  LICENSE  README.rst  mypy.ini  pyproject.toml
sphinx_autodoc_multimethod/: __init__.py
tests/: conftest.py  test_autodoc.py  test_functools.py  test_functools_native.py  test_multimethod.py  test_sphinx_multimethod.py
tests/roots/test-autodoc/: conf.py  index.rst
tests/roots/test-functools/: conf.py
tests/roots/test-functools-native/: conf.py
tests/roots/test-multimethod/: conf.py  index.rst
tests/roots/test-multimethod-typehints-sig-only/: conf.py
